# storefront

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  LICENSE  README.md  SECURITY.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  sandbox_entrypoint.py
.github/: CODEOWNERS  settings.yml
.github/workflows/: ci.yml  codeql.yml
playground/: admin.py  apps.py  conftest.py  factories.py  models.py  monday.py  permissions.py  providers.py  sandbox.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py  workrules.py
playground/migrations/: 0001_initial.py  0002_rename_published_date_listtzuf_created_at_and_more.py  0003_alter_listtzuf_owner.py  0004_alter_listtzuf_owner.py  0005_alter_listtzuf_owner.py  0006_listtzuf_category.py  0007_listtzuf_completed_at.py  0008_alter_listtzuf_title.py  0009_tag_listtzuf_tags.py  0010_listtzuf_coworker.py  0011_remove_listtzuf_coworker_listtzuf_coworker.py  0012_listtzuf_due_date.py  0013_webhookevent.py
playground/templates/: login.html  task_list.html  user_list.html
playground/tests/: test_google_oauth.py  test_html_view.py  test_monday_webhook.py  test_tasks.py  test_user.py  test_webhook.py
storefront/: settings.py  urls.py
