[project]
name = "storefront"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth>=7.1.1",
    "django>=6.0.3",
    "django-allauth>=65.14.3",
    "djangorestframework>=3.16.1",
    "jwt>=1.4.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "storefront.settings"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--reuse-db"