[project]
name = "storefront"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "dj-rest-auth>=7.1.1",
    "django>=6.0.3",
    "django-allauth>=65.14.3",
    "djangorestframework>=3.16.1",
    "factory-boy>=3.3.0",
    "jwt>=1.4.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "storefront.settings"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--reuse-db"

[tool.coverage.run]
source = ["playground", "storefront"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/tests.py",
    "manage.py",
    "storefront/asgi.py",
    "storefront/wsgi.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
